// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> Should match previous snapshot with all options true 1`] = `
<DocumentFragment>
  <div
    class="text-container scrolled-down video-player-open has-video"
  >
    <div
      class="loading-spinner"
    >
      <span
        class="loading-spinner1 loading-spinner-child"
      />
      <span
        class="loading-spinner2 loading-spinner-child"
      />
      <span
        class="loading-spinner3 loading-spinner-child"
      />
      <span
        class="loading-spinner4 loading-spinner-child"
      />
      <span
        class="loading-spinner5 loading-spinner-child"
      />
      <span
        class="loading-spinner6 loading-spinner-child"
      />
      <span
        class="loading-spinner7 loading-spinner-child"
      />
      <span
        class="loading-spinner8 loading-spinner-child"
      />
      <span
        class="loading-spinner9 loading-spinner-child"
      />
      <span
        class="loading-spinner10 loading-spinner-child"
      />
      <span
        class="loading-spinner11 loading-spinner-child"
      />
      <span
        class="loading-spinner12 loading-spinner-child"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Text /> Should match previous snapshot with audioPlayerState true 1`] = `
<DocumentFragment>
  <div
    class="text-container audio-player-open"
    id="text-container-parent"
  >
    <a
      class="arrow-wrapper prev"
      href="/bible/engesv/EXO/40?audio_type=audio_drama"
      title=""
    >
      <svg
        class="prev-arrow-svg"
      >
        <use
          xlink:href="/svglist.svg#arrow_left"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </a>
    <div
      class="main-wrapper main-text-wrapper"
    />
    <a
      class="arrow-wrapper next"
      href="/bible/engesv/lev/2?audio_type=audio_drama"
      title=""
    >
      <svg
        class="next-arrow-svg"
      >
        <use
          xlink:href="/svglist.svg#arrow_right"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<Text /> Should match previous snapshot with changingVersion true 1`] = `
<DocumentFragment>
  <div
    class="text-container"
  >
    <div
      class="loading-spinner"
    >
      <span
        class="loading-spinner1 loading-spinner-child"
      />
      <span
        class="loading-spinner2 loading-spinner-child"
      />
      <span
        class="loading-spinner3 loading-spinner-child"
      />
      <span
        class="loading-spinner4 loading-spinner-child"
      />
      <span
        class="loading-spinner5 loading-spinner-child"
      />
      <span
        class="loading-spinner6 loading-spinner-child"
      />
      <span
        class="loading-spinner7 loading-spinner-child"
      />
      <span
        class="loading-spinner8 loading-spinner-child"
      />
      <span
        class="loading-spinner9 loading-spinner-child"
      />
      <span
        class="loading-spinner10 loading-spinner-child"
      />
      <span
        class="loading-spinner11 loading-spinner-child"
      />
      <span
        class="loading-spinner12 loading-spinner-child"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Text /> Should match previous snapshot with chapterTextLoadingState true 1`] = `
<DocumentFragment>
  <div
    class="text-container"
  >
    <div
      class="loading-spinner"
    >
      <span
        class="loading-spinner1 loading-spinner-child"
      />
      <span
        class="loading-spinner2 loading-spinner-child"
      />
      <span
        class="loading-spinner3 loading-spinner-child"
      />
      <span
        class="loading-spinner4 loading-spinner-child"
      />
      <span
        class="loading-spinner5 loading-spinner-child"
      />
      <span
        class="loading-spinner6 loading-spinner-child"
      />
      <span
        class="loading-spinner7 loading-spinner-child"
      />
      <span
        class="loading-spinner8 loading-spinner-child"
      />
      <span
        class="loading-spinner9 loading-spinner-child"
      />
      <span
        class="loading-spinner10 loading-spinner-child"
      />
      <span
        class="loading-spinner11 loading-spinner-child"
      />
      <span
        class="loading-spinner12 loading-spinner-child"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Text /> Should match previous snapshot with chapterTextLoadingState true 2`] = `
<DocumentFragment>
  <div
    class="text-container"
  >
    <div
      class="loading-spinner"
    >
      <span
        class="loading-spinner1 loading-spinner-child"
      />
      <span
        class="loading-spinner2 loading-spinner-child"
      />
      <span
        class="loading-spinner3 loading-spinner-child"
      />
      <span
        class="loading-spinner4 loading-spinner-child"
      />
      <span
        class="loading-spinner5 loading-spinner-child"
      />
      <span
        class="loading-spinner6 loading-spinner-child"
      />
      <span
        class="loading-spinner7 loading-spinner-child"
      />
      <span
        class="loading-spinner8 loading-spinner-child"
      />
      <span
        class="loading-spinner9 loading-spinner-child"
      />
      <span
        class="loading-spinner10 loading-spinner-child"
      />
      <span
        class="loading-spinner11 loading-spinner-child"
      />
      <span
        class="loading-spinner12 loading-spinner-child"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Text /> Should match previous snapshot with hasVideo true 1`] = `
<DocumentFragment>
  <div
    class="text-container has-video"
    id="text-container-parent"
  >
    <a
      class="arrow-wrapper prev"
      href="/bible/engesv/EXO/40?audio_type=audio_drama"
      title=""
    >
      <svg
        class="prev-arrow-svg"
      >
        <use
          xlink:href="/svglist.svg#arrow_left"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </a>
    <div
      class="main-wrapper main-text-wrapper"
    />
    <a
      class="arrow-wrapper next"
      href="/bible/engesv/lev/2?audio_type=audio_drama"
      title=""
    >
      <svg
        class="next-arrow-svg"
      >
        <use
          xlink:href="/svglist.svg#arrow_right"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<Text /> Should match previous snapshot with loadingNewChapterText true 1`] = `
<DocumentFragment>
  <div
    class="text-container"
  >
    <div
      class="loading-spinner"
    >
      <span
        class="loading-spinner1 loading-spinner-child"
      />
      <span
        class="loading-spinner2 loading-spinner-child"
      />
      <span
        class="loading-spinner3 loading-spinner-child"
      />
      <span
        class="loading-spinner4 loading-spinner-child"
      />
      <span
        class="loading-spinner5 loading-spinner-child"
      />
      <span
        class="loading-spinner6 loading-spinner-child"
      />
      <span
        class="loading-spinner7 loading-spinner-child"
      />
      <span
        class="loading-spinner8 loading-spinner-child"
      />
      <span
        class="loading-spinner9 loading-spinner-child"
      />
      <span
        class="loading-spinner10 loading-spinner-child"
      />
      <span
        class="loading-spinner11 loading-spinner-child"
      />
      <span
        class="loading-spinner12 loading-spinner-child"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Text /> Should match previous snapshot with loadingNewChapterText true 2`] = `
<DocumentFragment>
  <div
    class="text-container"
  >
    <div
      class="loading-spinner"
    >
      <span
        class="loading-spinner1 loading-spinner-child"
      />
      <span
        class="loading-spinner2 loading-spinner-child"
      />
      <span
        class="loading-spinner3 loading-spinner-child"
      />
      <span
        class="loading-spinner4 loading-spinner-child"
      />
      <span
        class="loading-spinner5 loading-spinner-child"
      />
      <span
        class="loading-spinner6 loading-spinner-child"
      />
      <span
        class="loading-spinner7 loading-spinner-child"
      />
      <span
        class="loading-spinner8 loading-spinner-child"
      />
      <span
        class="loading-spinner9 loading-spinner-child"
      />
      <span
        class="loading-spinner10 loading-spinner-child"
      />
      <span
        class="loading-spinner11 loading-spinner-child"
      />
      <span
        class="loading-spinner12 loading-spinner-child"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Text /> Should match previous snapshot with menuIsOpen true 1`] = `
<DocumentFragment>
  <div
    class="text-container"
    id="text-container-parent"
  >
    <div
      class="arrow-wrapper prev disabled"
    />
    <div
      class="main-wrapper main-text-wrapper"
    />
    <div
      class="arrow-wrapper next disabled"
    />
  </div>
</DocumentFragment>
`;

exports[`<Text /> Should match previous snapshot with no options true 1`] = `
<DocumentFragment>
  <div
    class="text-container"
    id="text-container-parent"
  >
    <a
      class="arrow-wrapper prev"
      href="/bible/engesv/EXO/40?audio_type=audio_drama"
      title=""
    >
      <svg
        class="prev-arrow-svg"
      >
        <use
          xlink:href="/svglist.svg#arrow_left"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </a>
    <div
      class="main-wrapper main-text-wrapper"
    />
    <a
      class="arrow-wrapper next"
      href="/bible/engesv/lev/2?audio_type=audio_drama"
      title=""
    >
      <svg
        class="next-arrow-svg"
      >
        <use
          xlink:href="/svglist.svg#arrow_right"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<Text /> Should match previous snapshot with subFooterOpen true 1`] = `
<DocumentFragment>
  <div
    class="text-container sub-footer-open"
    id="text-container-parent"
  >
    <a
      class="arrow-wrapper prev"
      href="/bible/engesv/EXO/40?audio_type=audio_drama"
      title=""
    >
      <svg
        class="prev-arrow-svg"
      >
        <use
          xlink:href="/svglist.svg#arrow_left"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </a>
    <div
      class="main-wrapper main-text-wrapper"
    />
    <a
      class="arrow-wrapper next"
      href="/bible/engesv/lev/2?audio_type=audio_drama"
      title=""
    >
      <svg
        class="next-arrow-svg"
      >
        <use
          xlink:href="/svglist.svg#arrow_right"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </a>
  </div>
</DocumentFragment>
`;

exports[`<Text /> Should match previous snapshot with videoPlayerOpen true 1`] = `
<DocumentFragment>
  <div
    class="text-container"
    id="text-container-parent"
  >
    <a
      class="arrow-wrapper prev"
      href="/bible/engesv/EXO/40?audio_type=audio_drama"
      title=""
    >
      <svg
        class="prev-arrow-svg"
      >
        <use
          xlink:href="/svglist.svg#arrow_left"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </a>
    <div
      class="main-wrapper main-text-wrapper"
    />
    <a
      class="arrow-wrapper next"
      href="/bible/engesv/lev/2?audio_type=audio_drama"
      title=""
    >
      <svg
        class="next-arrow-svg"
      >
        <use
          xlink:href="/svglist.svg#arrow_right"
          xmlns:xlink="http://www.w3.org/1999/xlink"
        />
      </svg>
    </a>
  </div>
</DocumentFragment>
`;
